k8s/authentik/authentik-outpost-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost-proxy
    namespace: authentik
spec:
    rules:
        - host: ha.morrislan.net
          http:
              paths:
                  - path: /outpost.goauthentik.io
                    pathType: Prefix
                    backend:
                        service:
                            name: ak-outpost-proxy
                            port:
                                number: 9000
